Scrollbar with fixed headers #53 (but still need to have an adaptive layout)

--- a/upset.css
+++ b/upset.css
@@ -322,7 +322,7 @@ select {
 }
 
 .fixed-y-container {
-    overflow-y: scroll;
+/*    overflow-y: scroll; */
     border-bottom: 2px solid pink;
 }
 
